# ecos-plugin-perplexity

./: .ecos_health_history.json  .gitignore  README.md  STRATUM_RELAY.md  pyproject.toml
config/: plugin_config.example.yaml
docs/: rapport-doc-perplexity-fctnmt.md
src/ecos_perplexity/: __init__.py  plugin.py
src/lot-1/: Bonnes_Pratiques_Instructions.md  Consolidation_Sources_Perplexity.md  Formats_Supportes_Perplexity.md  Gestion_Valorisation_47_Sources.md  Guide_Avance_Prompt_Engineering.md  Methodologie_Test_Validation.md  Metriques_Mesures_Impact.md  Optimisation_50_Sources.md  Simili-Programmation.md  Templates_Markdown_Indexation_Sources.md  Tutoriel_Python_Scoring_Sources.md  fonctionnalites-avancees-perplexity.md  modes-focus-perplexity.md  simili-programmation-perplexity.md
src/lot-2/: Simili-Programmation-Python-intro.md  analyse-securisation-fichiers.md  execution-python-integree.md  exploitation-execution-python.md  exploitation-modes-focus.md  formatage-gestion-structuree-sources.md  generation-optimisation-pages.md  gestion-automatique-spaces.md  gestion-automatisation-spaces.md  integrations-api-extensions.md  methodologie-test-validation.md  monitoring-reporting-analyse-usage.md  orchestration-pro-search.md  perspectives-evolutions-futures.md  pro-search-et-orchestration.md  workflows-cas-usage.md
src/lot-3/: 01_Backlog_User_Stories.md  02_Plan_Sprint.md  03_Revues_Sprint.md  04_Specifications_Fonctionnelles.md  05_Cahier_Charges_Parametres.yaml  06_Guide_Utilisation_Espace.md  07_Logique_Metier_Python.md  08_Exemples_Code_Python.md  09_Integration_API_Ext.md  10_Architecture_Espace.md  11_Procedures_CI_CD.md  12_Tracabilite_Versions.md  13_Tests_et_Validation.md  14_Doc_User_Final.md  15_Cas_Usage_Metier_Avances.md  16_Moteur_Regles_Metier.md  17_Data_Science_Avancee.md  18_IA_Recommandations_Business.md  19_Workflows_Automatises.md  20_Monitoring_Metier_SLA.md  21_Gestion_Risque_Metier.md  22_Event_Driven_CQRS.md  23_Outils_Collaboratifs.md  24_Cas_Pratiques_API.md  25_Tests_Automatises_QA.md  26_DevOps_CI_CD_Avances.md  27_Applications_Mobiles.md  (+7 more)
tests/: __init__.py
(+8 files in other folders)
