[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecos-plugin-perplexity"
version = "0.1.0-alpha1"
description = "Perplexity SuperMemory Plugin for ECOS-CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "ECOS Development Team", email = "gerivonderbitsh+dev@gmail.com"}
]
license = {text = "MIT"}
keywords = ["ecos", "plugin", "perplexity", "memory", "coordination", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ecos-cli>=4.5.0",
    "mcp>=0.8.0",
    "notion-client>=2.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/gerivdb/ecos-plugin-perplexity"
Repository = "https://github.com/gerivdb/ecos-plugin-perplexity"
Issues = "https://github.com/gerivdb/ecos-plugin-perplexity/issues"
Documentation = "https://github.com/gerivdb/ecos-plugin-perplexity/blob/main/docs/"

[project.entry-points."ecos.plugins"]
perplexity = "ecos_perplexity:PerplexityPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=ecos_perplexity --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
